# Real-Time-Stock-Streaming

./: .env  .gitignore  Makefile  README.md  databricks.yml  pyproject.toml
.github/workflows/: dev.yml  prod.yml
resources/: realtime_stock_job.yml  realtime_stock_pipeline.yml
src/: dlt_pipeline.ipynb  elt_pipeline.ipynb  setting.ipynb
src/lib/: get_news.py  transforms.py
streaming_quote/: .env  Dockerfile  get_quote.py  pyproject.toml  setup_crontab.sh
tests/: news.csv
tests/unit/: test_get_news.py  test_get_quote.py  test_transforms.py
